methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:22: error: not found: type Color1
def faitV(c1 :Color1 , c2 :Color2) {
              ^PatternPicture:22: error: not found: type Color2
def faitV(c1 :Color1 , c2 :Color2) {
                           ^