methods.picture.PatternPicture.scala.code
override def run() {
}

  

def faitDemiV(c:Color) {
  setCouleurCorps(c)
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  gauche()
  
}

def faitV(c1 :Color1 , c2 :Color2) {
  
}